--- a/styles/sections/_Designed-for-the-Future.scss
+++ b/styles/sections/_Designed-for-the-Future.scss
@@ -4,60 +4,89 @@
     overflow: hidden;
     padding: 10em $padding 16em $padding;
 
+    @include mobileSize {
+        padding: 5em 0;
+    }
+
     // this wraps the h2 + info and image
     .disigned-for-the-future--wrap {
         width: 100%;
         max-width: $max-width;
-        // outline: solid green 2px;
         display: flex;
         flex-direction: column;
         // margin-top: 5em;
 
         .designed__h2 {
             text-align: center;
-            font-size: rem(40px);
+            font-size: clamp(rem(26px), 6vw, rem(40px));
             color: color(primary-very-dark-blue);
         }
 
         //this wraps the info and the image containers
         .designed-content--wrap {
-            // outline: solid brown 2px;
             display: flex;
             margin-top: 7em;
             height: auto;
 
+            @include mobileSize {
+                flex-direction: column-reverse;
+                margin-top: 2em;
+            }
+
             //this wraps the text portion of the section
             .designed-content__info--wrap {
-                // outline: solid yellow 2px;
                 width: 100%;
                 // padding-right: 4em;
+
+                @include mobileSize {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    padding: 0 2.47em;
+                }
 
                 .top__h3 {
                     font-size: rem(26px);
                     color: color(primary-very-dark-blue);
+
+                    @include mobileSize {
+                        text-align: center;
+                    }
                 }
 
                 .bottom__h3 {
                     margin-top: 3em;
                     font-size: rem(26px);
                     color: color(primary-very-dark-blue);
+
+                    @include mobileSize {
+                        text-align: center;
+                    }
                 }
 
                 .bottom__p,
                 .top__p {
                     max-width: 52.25ch;
                     margin-top: 1em;
-                    font-size: clamp(rem(14px), 2vw, rem(16px));
+                    // font-size: clamp(rem(14px), 2vw, rem(16px));
                     color: color(neutral-body-copy);
                     word-spacing: 0.15em;
+
+                    @include mobileSize {
+                        text-align: center;
+                    }
                 }
             }
 
             //this holds the image
             .info__img--container {
                 position: relative;
-                // outline: solid red 2px;
                 width: 100%;
+
+                @include mobileSize {
+                    display: grid;
+                    place-items: center;
+                }
                 .info__img {
                     // padding: 2em 2em 2em 0;
                     position: absolute;
@@ -66,6 +95,21 @@
                     transform: translate(10%, -26.5%);
 
                     max-width: rem(900px);
+
+                    @include mobileSize {
+                        display: none;
+                    }
+                }
+
+                .info__img--mobile {
+                    display: none;
+
+                    @include mobileSize {
+                        display: block;
+                        width: 100%;
+                        max-width: rem(550px);
+                        margin-bottom: 2em;
+                    }
                 }
             }
         }
