--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2,4 +2,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap");
 @import "partials/utils/variables", "partials/utils/functions",
     "partials/utils/mixins", "partials/boilerplate", "partials/buttons",
-    "sections/header-and-CTA", "sections/Designed-for-the-Future";
+    "sections/header-and-CTA", "sections/Designed-for-the-Future",
+    "sections/State-of-the-art";
