--- a/css/styles.css
+++ b/css/styles.css
@@ -34,8 +34,10 @@ h3 {
 }
 
 p {
-  margin: 0;
+  margin: 1em 0 0 0;
   line-height: 1.8;
+  word-spacing: 0.05em;
+  max-width: 50ch;
 }
 
 a {
@@ -481,12 +483,11 @@ body {
 
 .call-to-action--container .call-to-action--wrap .cta__h1 {
   color: white;
-  font-size: clamp(2.125rem, 5vw, 3.75rem);
+  font-size: clamp(2.125rem, 5vw, 3.625rem);
   text-align: center;
 }
 
 .call-to-action--container .call-to-action--wrap .cta__p {
-  margin-top: 1em;
   color: rgba(255, 255, 255, 0.76);
   font-weight: 500;
   font-size: clamp(1.125rem, 2vw, 1.25rem);
@@ -525,11 +526,19 @@ body {
           flex-direction: row;
   overflow: hidden;
   padding: 10em 2em 16em 2em;
+  max-height: 59.375rem;
 }
 
 @media only screen and (max-width: 950px) {
   .designed-for-the-future--container {
-    padding: 5em 0;
+    padding: 5em 0 22em 0;
+    max-height: unset;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .designed-for-the-future--container {
+    padding: 5em 0 17em 0;
   }
 }
 
@@ -547,7 +556,7 @@ body {
 
 .designed-for-the-future--container .disigned-for-the-future--wrap .designed__h2 {
   text-align: center;
-  font-size: clamp(1.625rem, 6vw, 2.5rem);
+  font-size: clamp(1.625rem, 6vw, 2.25rem);
   color: #1f3f5b;
 }
 
@@ -614,10 +623,7 @@ body {
 
 .designed-for-the-future--container .disigned-for-the-future--wrap .designed-content--wrap .designed-content__info--wrap .bottom__p,
 .designed-for-the-future--container .disigned-for-the-future--wrap .designed-content--wrap .designed-content__info--wrap .top__p {
-  max-width: 52.25ch;
-  margin-top: 1em;
   color: #4b5862;
-  word-spacing: 0.05em;
 }
 
 @media only screen and (max-width: 950px) {
@@ -679,7 +685,16 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   border-radius: 0 75px 0 75px;
-  height: 24.0625rem;
+  height: 25rem;
+}
+
+@media only screen and (max-width: 950px) {
+  .state-of-the-art--container {
+    height: 37.5rem;
+    padding: 0 0 5em 0;
+    background-size: cover;
+    background-position: 50% -225px;
+  }
 }
 
 .state-of-the-art--container .text-and-image--wrap {
@@ -687,6 +702,18 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+@media only screen and (max-width: 950px) {
+  .state-of-the-art--container .text-and-image--wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
 }
 
 .state-of-the-art--container .text-and-image--wrap .state-of-the-art__img--wrap {
@@ -697,14 +724,22 @@ body {
 .state-of-the-art--container .text-and-image--wrap .state-of-the-art__img--wrap .state-of-the-art__img {
   right: 3.4375rem;
   position: relative;
-  bottom: 4.0625rem;
+  bottom: 4.375rem;
   width: 100%;
 }
 
 @media only screen and (max-width: 1050px) {
   .state-of-the-art--container .text-and-image--wrap .state-of-the-art__img--wrap .state-of-the-art__img {
-    bottom: 3.125rem;
+    bottom: 4.5rem;
     right: 2.8125rem;
+  }
+}
+
+@media only screen and (max-width: 950px) {
+  .state-of-the-art--container .text-and-image--wrap .state-of-the-art__img--wrap .state-of-the-art__img {
+    position: absolute;
+    right: 0;
+    bottom: 1.875rem;
   }
 }
 
@@ -729,13 +764,14 @@ body {
           align-items: flex-start;
 }
 
-.state-of-the-art--container .text-and-image--wrap .state-of-the-art__info--wrap .info__h2 {
-  font-size: clamp(1.625rem, 6vw, 2.25rem);
+@media only screen and (max-width: 950px) {
+  .state-of-the-art--container .text-and-image--wrap .state-of-the-art__info--wrap {
+    padding: 0 2em;
+    text-align: center;
+  }
 }
 
-.state-of-the-art--container .text-and-image--wrap .state-of-the-art__info--wrap .info__p {
-  max-width: 50ch;
-  margin-top: 1em;
-  word-spacing: 0.05em;
+.state-of-the-art--container .text-and-image--wrap .state-of-the-art__info--wrap .info__h2 {
+  font-size: 2.25rem;
 }
 /*# sourceMappingURL=styles.css.map */
