--- a/styles/sections/_Designed-for-the-Future.scss
+++ b/styles/sections/_Designed-for-the-Future.scss
@@ -3,9 +3,15 @@
     // background: rgba(255, 192, 203, 0.411);
     overflow: hidden;
     padding: 10em $padding 16em $padding;
+    max-height: rem(950px);
 
     @include mobileSize {
-        padding: 5em 0;
+        padding: 5em 0 22em 0;
+        max-height: unset;
+    }
+
+    @media only screen and (max-width: 425px) {
+        padding: 5em 0 17em 0;
     }
 
     // this wraps the h2 + info and image
@@ -18,7 +24,7 @@
 
         .designed__h2 {
             text-align: center;
-            font-size: clamp(rem(26px), 6vw, rem(40px));
+            font-size: clamp(rem(26px), 6vw, rem(36px));
             color: color(primary-very-dark-blue);
         }
 
@@ -48,7 +54,6 @@
                 .top__h3 {
                     font-size: rem(26px);
                     color: color(primary-very-dark-blue);
-
                     @include mobileSize {
                         text-align: center;
                     }
@@ -57,6 +62,7 @@
                 .bottom__h3 {
                     margin-top: 3em;
                     font-size: rem(26px);
+
                     color: color(primary-very-dark-blue);
 
                     @include mobileSize {
@@ -66,11 +72,9 @@
 
                 .bottom__p,
                 .top__p {
-                    max-width: 52.25ch;
-                    margin-top: 1em;
+                    // max-width: 50ch;
                     // font-size: clamp(rem(14px), 2vw, rem(16px));
                     color: color(neutral-body-copy);
-                    word-spacing: 0.05em;
 
                     @include mobileSize {
                         text-align: center;
