--- a/styles/sections/_State-of-the-art.scss
+++ b/styles/sections/_State-of-the-art.scss
@@ -8,26 +8,50 @@
     display: flex;
     justify-content: center;
     border-radius: 0 $border-radius 0 $border-radius;
-    height: rem(385px);
+    height: rem(400px);
+
+    @include mobileSize {
+        height: rem(600px);
+        // margin-top: 5em;
+        padding: 0 0 5em 0;
+        background-size: cover;
+        background-position: 50% -225px;
+    }
     .text-and-image--wrap {
         // outline: solid red 2px;
         max-width: $max-width;
         display: flex;
 
+        @include mobileSize {
+            flex-direction: column;
+            justify-content: flex-end;
+        }
+
         .state-of-the-art__img--wrap {
             position: relative;
             width: 100%;
+
             .state-of-the-art__img {
                 // position: absolute;
                 // bottom: rem(-225px);
                 right: rem(55px);
                 position: relative;
-                bottom: rem(65px);
+                bottom: rem(70px);
                 width: 100%;
 
                 @media only screen and (max-width: 1050px) {
-                    bottom: rem(50px);
+                    // display: none;
+                    bottom: rem(72px);
                     right: rem(45px);
+                    // transform: translate(13%, 25%);
+                }
+
+                @include mobileSize {
+                    position: absolute;
+                    right: 0;
+                    bottom: rem(30px);
+                    // transform: translateY(-225px);
+                    // min-width: 375px;
                 }
             }
         }
@@ -37,15 +61,18 @@
             color: color(neutral-white);
             @include flexCenter(column);
             align-items: flex-start;
+
+            @include mobileSize {
+                padding: 0 $padding;
+                text-align: center;
+            }
             .info__h2 {
-                font-size: clamp(rem(26px), 6vw, rem(36px));
+                font-size: rem(36px);
             }
 
             .info__p {
-                max-width: 50ch;
+                // max-width: 52ch;
                 // min-width: 50ch;
-                margin-top: 1em;
-                word-spacing: 0.05em;
             }
         }
     }
