--- a/styles/partials/_boilerplate.scss
+++ b/styles/partials/_boilerplate.scss
@@ -29,6 +29,11 @@ h3 {
     margin: 0;
 }
 
+h3 {
+    font-size: rem(26px);
+    color: color(primary-very-dark-blue);
+}
+
 p {
     margin: 1em 0 0 0;
     line-height: 1.8;
