--- a/styles/sections/_State-of-the-art.scss
+++ b/styles/sections/_State-of-the-art.scss
@@ -70,10 +70,10 @@
                 font-size: rem(36px);
             }
 
-            .info__p {
-                // max-width: 52ch;
-                // min-width: 50ch;
-            }
+            // .info__p {
+            //     // max-width: 52ch;
+            //     // min-width: 50ch;
+            // }
         }
     }
 }
