--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,11 @@ h3 {
   margin: 0;
 }
 
+h3 {
+  font-size: 1.625rem;
+  color: #1f3f5b;
+}
+
 p {
   margin: 1em 0 0 0;
   line-height: 1.8;
@@ -526,7 +531,7 @@ body {
           flex-direction: row;
   overflow: hidden;
   padding: 10em 2em 16em 2em;
-  max-height: 59.375rem;
+  max-height: 62.5rem;
 }
 
 @media only screen and (max-width: 950px) {
@@ -773,5 +778,124 @@ body {
 
 .state-of-the-art--container .text-and-image--wrap .state-of-the-art__info--wrap .info__h2 {
   font-size: 2.25rem;
+}
+
+.laptop-section {
+  padding: 20em 2em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  max-height: 62.5rem;
+}
+
+@media only screen and (max-width: 950px) {
+  .laptop-section {
+    padding: 5em 0;
+  }
+}
+
+.laptop-section .laptop__content--wrap {
+  max-width: 68.75rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+
+@media only screen and (max-width: 950px) {
+  .laptop-section .laptop__content--wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+}
+
+.laptop-section .laptop__content--wrap .laptop__img--wrap {
+  width: 100%;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.laptop-section .laptop__content--wrap .laptop__img--wrap .laptop__img {
+  position: absolute;
+  right: 1.5625rem;
+  bottom: -11.25rem;
+}
+
+@media only screen and (max-width: 950px) {
+  .laptop-section .laptop__content--wrap .laptop__img--wrap .laptop__img {
+    display: none;
+  }
+}
+
+.laptop-section .laptop__content--wrap .laptop__img--wrap .laptop__img--mobile {
+  display: none;
+}
+
+@media only screen and (max-width: 950px) {
+  .laptop-section .laptop__content--wrap .laptop__img--wrap .laptop__img--mobile {
+    display: block;
+    width: 100%;
+    -webkit-transform: scale(125%);
+            transform: scale(125%);
+    max-width: 43.75rem;
+  }
+}
+
+@media only screen and (min-width: 500px) {
+  .laptop-section .laptop__content--wrap .laptop__img--wrap .laptop__img--mobile {
+    -webkit-transform: unset;
+            transform: unset;
+  }
+}
+
+.laptop-section .laptop__content--wrap .laptop__info--wrap {
+  width: 100%;
+  padding: 0 2em;
+}
+
+@media only screen and (max-width: 950px) {
+  .laptop-section .laptop__content--wrap .laptop__info--wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-top: 4em;
+  }
+}
+
+.laptop-section .laptop__content--wrap .laptop__info--wrap .bottom__h3 {
+  margin-top: 3em;
+}
+
+.laptop-section .laptop__content--wrap .laptop__info--wrap .top__p,
+.laptop-section .laptop__content--wrap .laptop__info--wrap .bottom__p {
+  color: #4b5862;
 }
 /*# sourceMappingURL=styles.css.map */
