--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -3,4 +3,4 @@
 @import "partials/utils/variables", "partials/utils/functions",
     "partials/utils/mixins", "partials/boilerplate", "partials/buttons",
     "sections/header-and-CTA", "sections/Designed-for-the-Future",
-    "sections/State-of-the-art", "sections/laptop-section";
+    "sections/State-of-the-art", "sections/laptop-section", "sections/footer";
