--- a/css/styles.css
+++ b/css/styles.css
@@ -801,7 +801,8 @@ body {
 
 @media only screen and (max-width: 950px) {
   .laptop-section {
-    padding: 3em 0;
+    padding: 3em 0 5em 0;
+    max-height: unset;
   }
 }
 
