--- a/css/styles.css
+++ b/css/styles.css
@@ -871,6 +871,7 @@ a {
   .laptop-section .laptop__content--wrap .laptop__img--wrap .laptop__img--mobile {
     display: block;
     max-width: 43.75rem;
+    width: 100%;
   }
 }
 
