--- a/styles/sections/_laptop-section.scss
+++ b/styles/sections/_laptop-section.scss
@@ -42,6 +42,7 @@
                 @include mobileSize {
                     display: block;
                     max-width: rem(700px);
+                    width: 100%;
                 }
 
                 @media only screen and (min-width: 500px) {
