--- a/styles/sections/_laptop-section.scss
+++ b/styles/sections/_laptop-section.scss
@@ -25,6 +25,10 @@
             align-items: center;
             justify-content: center;
 
+            @include mobileSize {
+                overflow: hidden;
+            }
+
             .laptop__img {
                 // width: 100%;
                 position: absolute;
@@ -42,7 +46,7 @@
                 @include mobileSize {
                     display: block;
                     max-width: rem(700px);
-                    width: 100%;
+                    // width: 100%;
                 }
 
                 @media only screen and (min-width: 500px) {
