--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,7 @@ body {
   font-size: 1rem;
   font-family: "Overpass", Arial, Helvetica, sans-serif;
   min-height: 100%;
+  background: #fafafa;
 }
 
 p {
