--- a/css/styles.css
+++ b/css/styles.css
@@ -161,9 +161,9 @@ a {
     background-image: linear-gradient(to right, rgba(255, 143, 112, 0.9), rgba(255, 61, 84, 0.9)), url("../images/bg-pattern-intro.svg");
     background-size: cover, 350%;
     background-repeat: no-repeat;
-    background-position: center, 35% 32%;
+    background-position: center, 35% 34%;
     height: unset;
-    padding: 2em 0 8em 0;
+    padding: 2em 0 10em 0;
   }
 }
 
@@ -576,6 +576,12 @@ a {
   display: flex;
 }
 
+@media only screen and (max-width: 950px) {
+  .call-to-action--container .call-to-action--wrap .cta__link--wrap {
+    margin-top: 3em;
+  }
+}
+
 .designed-for-the-future--container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -591,7 +597,7 @@ a {
       -ms-flex-direction: row;
           flex-direction: row;
   overflow: hidden;
-  padding: 10em 2em 16em 2em;
+  padding: 10em 2em 17em 2em;
   max-height: 62.5rem;
 }
 
