--- a/css/styles.css
+++ b/css/styles.css
@@ -534,6 +534,7 @@ a {
 }
 
 .call-to-action--container .call-to-action--wrap {
+  margin-bottom: 2em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -551,6 +552,7 @@ a {
 
 @media only screen and (max-width: 950px) {
   .call-to-action--container .call-to-action--wrap {
+    margin-bottom: 0;
     margin-top: 3.5em;
   }
 }
