--- a/styles/partials/utils/_mixins.scss
+++ b/styles/partials/utils/_mixins.scss
@@ -1,14 +1,14 @@
 @mixin background-Gradient-Red {
-    background-image: linear-gradient(
+    background-image: url("../images/bg-pattern-intro.svg"),
+        linear-gradient(
             to right,
-            hsla(13, 100%, 72%, 0.9),
-            hsla(353, 100%, 62%, 0.9)
-        ),
-        url("../images/bg-pattern-intro.svg");
+            hsla(13, 100%, 72%, 1),
+            hsla(353, 100%, 62%, 1)
+        );
 
     // background-size: cover, 300%;
     background-repeat: no-repeat;
-    background-position: center, 26% 52%;
+    background-position: 26% 52%, center;
 }
 
 @mixin background-Gradient-Red-Mobile {
